fixed the font style of title and white space between ´section2_5´ and ´section3´

--- a/style/section1.css
+++ b/style/section1.css
@@ -64,7 +64,7 @@
 
 #contacts h2 {
     margin: 0px;
-    font-family: "Itim", cursive;
+    font-family: "irish grover", system-ui;
     text-align: center;
     font-size: 40px;
     font-weight: 500;
