--- a/style/section3.css
+++ b/style/section3.css
@@ -17,6 +17,7 @@
     text-align: center;
 
     line-height: 7rem;
+    margin-top: 0px;
 }
 
 #project1, #project2 {
